Aufgabe1/gta_v1/public/stylesheets/style.css
/* Setting Up Grid-View */
* {
  box-sizing: border-box;
}

.col-1 {width: 8.33%;}
.col-2 {width: 16.66%;}
.col-3 {width: 25%;}
.col-4 {width: 33.33%;}
.col-5 {width: 41.66%;}
.col-6 {width: 50%;}
.col-7 {width: 58.33%;}
.col-8 {width: 66.66%;}
.col-9 {width: 75%;}
.col-10 {width: 83.33%;}
.col-11 {width: 91.66%;}
.col-12 {width: 100%;}

[class*="col-"] {
  float: left;
  padding: 15px;
}

/* End Setup */

body {
  padding: 50px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}

a {
  color: #00B7FF;
}

header {
  background-color:grey;
  width: auto;
}

main {
  overflow: auto;
}

input {
  height: 2em;
  width: 10em;
}

.tagging {
  min-width: 200px ;
}

.tagging input {
  margin: 0.3em 0;
}

.tagging button, {
  margin: 1em 0;
}

.tagging fieldset {
  height: 300px;
}

.discovery input {
  margin: 0.2em 0;
}

.taglist ul {
  padding: 0px; /*Reset Bullets*/
}

.taglist ul li {
  background-color: rgba(0, 204, 255, 0.616);
  list-style-position: inside;
  list-style: none;
  padding: 1em;
  margin: 0.5em 0;

}

.taglist ul li:hover {
  background-color: rgba(0, 84, 105, 0.616);

}

.tagmap img {
  margin: 0 20%;
}

footer {
  clear: both;
  background-color: grey;
  padding: 1.5em;
} 

